update of projects
3 more projects added

--- a/index.html
+++ b/index.html
@@ -383,6 +383,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
 
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
 <div class="span4">
                 <ul id="bl-work-items">
                   <li data-panel="panel-8" class="item" data-id="id-9" data-tag="map" data-type="map"><a href="#"><img src="images/VITASite.png" width="281px" height="191px" /><center><p>VITA/EITC Tax Prep Sites</p></center></a></li>
@@ -409,6 +416,27 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                   <li data-panel="panel-11" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
                 </ul>
                 <!--<p>Oakland Land Use Map</p>-->  
+              </div><!-- /span4 -->
+
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>Miley Maps</p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-13" class="item" data-id="id-13" data-tag="website" data-type="map"><a href="#"><img src="images/Dasymetric_SidebySide.png" width="281px" height="191px" /><center><p>Mosswood Park Access</p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="website" data-type="map"><a href="#"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
 
             </div><!-- /row-fluid -->
@@ -799,6 +827,66 @@ frameborder="0" scrolling="no"></iframe></div>
             </div><!-- /row-fluid --> 
           </div><!-- /panel11 -->
 
+<div data-panel="panel-12">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="75%" frameborder="0" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=fd38af165f9c449283a60b0308e75c5f" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview</h4>
+              <p>Miley Maps Key Indicators</p>
+              <h4>Project Details</h4>
+              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
+Key Indicators for each map:<br>
+Churches<br>
+Crime hotspots<br>
+Liquor Stores<br>
+Major land owners<br>
+Private Schools<br>
+Public Schools<br>
+Vacant Commercial<br>
+Vacant Residential<br>
+Violent crimes<br>
+              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
+.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel12 -->
+
+
+<div data-panel="panel-13">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="75%" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview</h4>
+              <p>Mosswood Park Access</p>
+              <h4>Project Details</h4>
+              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
+
+              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
+.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel13 -->
+
+<div data-panel="panel-14">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="75%" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=7ab9fe2121fb40f39144d44dbe8ce053" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview</h4>
+              <p>City of Oakland, CA Voting</p>
+              <h4>Project Details</h4>
+              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
+
+              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
+.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel14 -->
 
 
 					<nav>
