index and image
update on image and index

--- a/index.html
+++ b/index.html
@@ -838,15 +838,15 @@ frameborder="0" scrolling="no"></iframe></div>
               <h4>Project Details</h4>
               <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
 Key Indicators for each map:<br>
-Churches<br>
-Crime hotspots<br>
-Liquor Stores<br>
-Major land owners<br>
-Private Schools<br>
-Public Schools<br>
-Vacant Commercial<br>
-Vacant Residential<br>
-Violent crimes<br>
+  ∙ Churches<br>
+  ∙ Crime hotspots<br>
+  ∙ Liquor Stores<br>
+  ∙ Major land owners<br>
+  ∙ Private Schools<br>
+  ∙ Public Schools<br>
+  ∙ Vacant Commercial<br>
+  ∙ Vacant Residential<br>
+  ∙ Violent crimes<br>
               The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
 .<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
               </div><!-- /span8 -->
