--- a/index.html
+++ b/index.html
@@ -383,13 +383,6 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
 
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
-                </ul>
-                <!--<p>Hipster Unite</p>-->    
-              </div><!-- /span4 -->
-
 <div class="span4">
                 <ul id="bl-work-items">
                   <li data-panel="panel-8" class="item" data-id="id-9" data-tag="map" data-type="map"><a href="#"><img src="images/VITASite.png" width="281px" height="191px" /><center><p>VITA/EITC Tax Prep Sites</p></center></a></li>
@@ -405,24 +398,38 @@ Presented strategic plan on how to leverage private funds, investment and mentor
               </div><!-- /span4 -->
 
 <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-15" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="" width="281px" height="191px" /><center><p></p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
                 <ul id="bl-work-items">
                   <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="191px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
-                <!--<p>Oakland Land Use Map</p>-->  
+                <!--<p>Potential Crude Oil Spill</p>-->  
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items">
                   <li data-panel="panel-11" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
                 </ul>
-                <!--<p>Oakland Land Use Map</p>-->  
+                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>Miley Maps</p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Miley Maps</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -673,7 +680,9 @@ Group facilitation:
 								<h4>Project Overview</h4>
 								<p>Bringing Bicycles to an underserved community</p>
 								<h4>Project Details</h4>
-								<p>Bicis Del Pueblo is a project that teaches both youth and adults bicycle mechanics and safe fun uses for bike in the Excelsior district of San Francisco.This site allows Bicis to reach a wider audience and serves as the platform for the organizational inventory system.</p>
+								<p>Bicis Del Pueblo is a project that teaches both youth and adults bicycle mechanics and safe fun uses for bike in the Excelsior district of San Francisco.This site allows Bicis to reach a wider audience and serves as the platform for the organizational inventory system. <a href="http://www.bicisdelpueblo.com">Visit the Site now</a></p>
+
+                </p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel1 -->
@@ -687,7 +696,7 @@ Group facilitation:
 							<h4>Project Overview</h4>
 							<p>Hipster Unite Website</p>
 							<h4>Project Details</h4>
-							<p>This is a blog site that has ideas, thoughts, and observations from the daily life of a self described hipster.</p>
+							<p>This is a blog site that has ideas, thoughts, and observations from the daily life of a self described hipster. <a href="http://www.hipsterunite.blogspot.com">Visit the Site now</a></p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel2 -->
@@ -701,7 +710,7 @@ Group facilitation:
 							<h4>Project Overview</h4>
 							<p>Updating a site that hasn't been touched for more than five years</p>
 							<h4>Project Details</h4>
-							<p>Making sure information about important projects is easily available and accessible to teens, parents, and program managers.</p>
+							<p>Making sure information about important projects is easily available and accessible to teens, parents, and program managers. <a href="http://www.bayviewbeacon.org">Visit the Site now</a></p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel3 -->
@@ -837,7 +846,8 @@ frameborder="0" scrolling="no"></iframe></div>
               <p>Miley Maps Key Indicators</p>
               <h4>Project Details</h4>
               <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
-Key Indicators for each map:<br>
+                <br>
+<h4>Key Indicators for each map:</h4><br>
   ∙ Churches<br>
   ∙ Crime hotspots<br>
   ∙ Liquor Stores<br>
@@ -859,7 +869,7 @@ Key Indicators for each map:<br>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="95%" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview</h4>
               <p>Mosswood Park Access</p>
               <h4>Project Details</h4>
@@ -888,6 +898,22 @@ Key Indicators for each map:<br>
             </div><!-- /row-fluid --> 
           </div><!-- /panel14 -->
 
+<div data-panel="panel-15">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="75%" frameborder="0" src="images/Community_Well.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview</h4>
+              <p>City of Oakland, CA Voting</p>
+              <h4>Project Details</h4>
+              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
+
+              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
+.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel14 -->
 
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
