--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="" width="281px" height="191px" /><center><p></p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>  </p></center></a></li>
                 </ul>
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
@@ -841,7 +841,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=fd38af165f9c449283a60b0308e75c5f" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=fd38af165f9c449283a60b0308e75c5f" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview</h4>
               <p>Miley Maps Key Indicators</p>
               <h4>Project Details</h4>
@@ -869,7 +869,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="95%" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview</h4>
               <p>Mosswood Park Access</p>
               <h4>Project Details</h4>
@@ -886,7 +886,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=7ab9fe2121fb40f39144d44dbe8ce053" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=7ab9fe2121fb40f39144d44dbe8ce053" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview</h4>
               <p>City of Oakland, CA Voting</p>
               <h4>Project Details</h4>
@@ -903,7 +903,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="images/Community_Well.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="images/Community_Well.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview</h4>
               <p>City of Oakland, CA Voting</p>
               <h4>Project Details</h4>
